Updated imprint with instagram filters, updated images

--- a/impressum.html
+++ b/impressum.html
@@ -1,7 +1,47 @@
 <html>
 
+<head>
+    <link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cssgram-cssgram.netdna-ssl.com/cssgram.min.css">
+    <link href="css/one-page-wonder.css" rel="stylesheet">
+    <link href="css/overwrites.css" rel="stylesheet">
+
+</head>
+
 <body>
-    <h1>Impressum</h1>
+    <h1>Impressum</h1> Who cares who is reponsible for the content of this site. Let's just enjoy some awesome Instagram filters!
+
+    <div class="row">
+        <div class="col-xs-12 col-sm-6">
+            <img class="img-responsive" src="images/waves.jpg" alt="Normal waves">
+        </div>
+
+
+        <div class="col-xs-12 col-sm-6">
+            <figure class="_1977">
+                <img class="img-responsive" src="images/waves.jpg" alt="1977 retro waves">
+            </figure>
+        </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="row">
+        <div class="col-xs-12 col-sm-6">
+            <figure class="xpro2">
+                <img class="img-responsive" src="images/waves.jpg" alt="x pro waves">
+            </figure>
+        </div>
+
+
+        <div class="col-xs-12 col-sm-6">
+            <figure class="moon">
+                <img class="img-responsive" src="images/waves.jpg" alt="Moon waves">
+            </figure>
+        </div>
+    </div>
+
 
     <footer>
         <a href="index.html">Zur&uuml;ck</a>
